Inserimento valutazioni parte 1

--- a/cosaDicono.html
+++ b/cosaDicono.html
@@ -9,96 +9,197 @@
     <link rel="stylesheet" href="styles/bootstrap/bootstrap-theme.css">
     <link rel="stylesheet" href="styles/custom.css">
 </head>
+
 <body>
 
-<!-- Logo -->
-<div class="embed-responsive-item" align="center" id="img_puzzle">
-    <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250">
-</div>
+    <!-- Logo -->
+    <div class="embed-responsive-item" align="center" id="img_puzzle">
+        <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250">
+    </div>
 
-<!-- Navigation -->
-<nav class="navbar navbar-default" role="navigation">
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">Puzzle</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="concept.html">Concept</a>
+                    </li>
+                    <li>
+                        <a href="funzionalita.html">Funzionalità</a>
+                    </li>
+                    <li>
+                        <a href="cosaDicono.html">Dicono di noi</a>
+                    </li>
+                    <li>
+                        <a href="noi.html">Chi siamo</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    <!-- fine navigation bar -->
+
+    <!-- Valutazioni utenti -->
     <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-            <a class="navbar-brand" href="index.html">Puzzle</a>
+
+        <div class="row">
+            <div class="box" id="valut">
+
+                <div class="col-lg-12">
+                    <hr>
+                    <h4 class="intro-text text-center">
+                        <strong>Valutazione con gli utenti</strong>
+                    </h4>
+                    <hr> <br> <br> <br>
+                </div>
+
+                <!-- INTERVISTE IN PROFONDITA' -->
+                <h3> <br><br> <b> FASE 1 - Interviste per la definizione dei bisogni del target </b> </h3>
+                <br>
+                <br>
+
+                <p>Per capire quali fossero i reali bisogni degli utenti è stata effettuata un’analisi qualitativa sul campo mirata alla definizione del concept, consistente in delle <b>interviste in profondità</b>.</p>
+                <br>
+
+                <h5> <b> Profilo degli utenti </b> </h5>
+                <br>
+                <p>Le interviste sono state effettuate tra il 21 e il 25 aprile 2017 a Torino e hanno coinvolto un campione di 7 utenti.</p>
+                <br>
+                <div class="cl-md-6"  align="center">
+                    <img class="img-responsive" src="images/tabelleValutazioni/utenti.PNG"/>
+                </div>
+                <br> <br>
+                <p>Insegnanti intervistati:</p>
+                <br>
+                <div class="cl-md-6"  align="center">
+                    <img src="images/tabelleValutazioni/maestre.PNG"/>
+                </div>
+                <br>
+                <p>Genitori intervistati:</p>
+                <br>
+                <div class="cl-md-6"  align="center">
+                    <img src="images/tabelleValutazioni/mamme.PNG"/>
+                </div>
+                <br>
+                <br>
+
+                <h5> <b> Strumenti della valutazione</b></h5>
+                <br>
+                <p>
+                    L’intervista agli insegnanti è stata suddivisa in 3 macro-aree fondamentali: <br>
+                    1. Rapporto con gli alunni<br>
+                    2. Rapporto con i genitori<br>
+                    3. Rapporto con i social network<br>
+                </p>
+                <br>
+                <p>
+                    L’intervista ai genitori è stata suddivisa in 4 macro-aree fondamentali: <br>
+                    1. Rapporto con il figlio<br>
+                    2. Rapporto con la scuola<br>
+                    3. Rapporto con gli altri genitori<br>
+                    4. Rapporto con i social network<br>
+                </p>
+                <br>
+                <p> <i>  Visualizza l'intera
+                    <a href="https://drive.google.com/drive/folders/0B6xfNs1kIsJzSVVTQmlEUmZVa2s">
+                        traccia delle interviste
+                    </a> </i>
+                </p>
+
+                <br>
+                <br>
+                <h5> <b> Risultato della valutazione </b> </h5>
+
+                <p>Dall’analisi sugli utenti risulta che gli insegnanti necessitano di una maggiore comunicazione diretta con i genitori, senza dover dunque scrivere sui diari dei bambini eventuali avvisi o contattare la segreteria didattica qualora volessero organizzare un incontro. <br>
+                    I genitori, dal canto loro, oltre a desiderare di essere quotidianamente informati su come procede la vita scolastica dei propri figli, necessiterebbero di un supporto extra-scolastico da
+                    parte degli insegnanti, in modo da poter aiutare i bambini durante lo svolgimento dei compiti per casa adoperando lo stesso metodo applicato dai docenti in aula.
+                    Ma ciò che farebbe loro più piacere sarebbe allargare il proprio “network” di amicizie, in modo da poter contare sull’aiuto reciproco, e organizzare nuove attività che possano consentire loro di darsi una mano a vicenda o, più semplicemente, di divertirsi insieme.</p>
+                <br>
+                <br>
+                <h5> <b> Analisi critica e lavoro futuro </b></h5>
+
+                <p>Sulla base dei risultati ottenuti è stato possibile definire le funzionalità utili agli utenti e, di conseguenza, si è proceduto alla definizione della struttura del sito.</p>
+
+
+                <!-- PRIMA VALUTAZIONE MOCK-UP -->
+                <h3> <br><br> <b> FASE 2 - Primo test effettuato sul mock-up per riscontrare eventuali problematiche </b> </h3>
+
+                <br>
+                <br>
+                <h5> <b> Profilo degli utenti </b> </h5>
+
+                <p>Descrizione sintetica di tutte le caratteristiche degli utenti che hanno partecipato alla valutazione del prototipo.
+                    Tale descrizione deve necessariamente contenere almeno il numero degli utenti, l'età, il genere e le caratteristiche rilevanti nel caso
+                    specifico del vostro social network (ad esempio il corso di studio e l'anno se studenti, oppure la professione, oppure gli interessi, ...)</p>
+                <br>
+                <br>
+                <h5> <b> Strumenti della valutazione</b></h5>
+
+                <p>Questa sezione deve contenere gli strumenti usati durante la valutazione (questionari e/o traccia delle interviste)</p>
+                <br>
+                <br>
+                <h5> <b> Risultato della valutazione </b> </h5>
+
+                <p>Questa sezione deve contenere la sintesi dei risultati della valutazione, possibilmente in forma di grafici</p>
+                <br>
+                <br>
+                <h5> <b> Analisi critica e lavoro futuro </b></h5>
+
+                <p>Questa sezione deve contenere una breve analisi degli eventuali problemi riscontrati durante la valutazione e le modifiche
+                    da implementare nella (ipotetica) seconda versione del prototipo</p>
+
+
+                <!-- SECONDA VALUTAZIONE MOCK-UP -->
+                <h3> <br><br> <b> FASE 3 - Test finale effettuato sul mock-up </b> </h3>
+
+                <br>
+                <br>
+                <h5> <b> Profilo degli utenti </b> </h5>
+
+                <p>Descrizione sintetica di tutte le caratteristiche degli utenti che hanno partecipato alla valutazione del prototipo.
+                    Tale descrizione deve necessariamente contenere almeno il numero degli utenti, l'età, il genere e le caratteristiche rilevanti nel caso
+                    specifico del vostro social network (ad esempio il corso di studio e l'anno se studenti, oppure la professione, oppure gli interessi, ...)</p>
+                <br>
+                <br>
+                <h5> <b> Strumenti della valutazione</b></h5>
+
+                <p>Questa sezione deve contenere gli strumenti usati durante la valutazione (questionari e/o traccia delle interviste)</p>
+                <br>
+                <br>
+                <h5> <b> Risultato della valutazione </b> </h5>
+
+                <p>Questa sezione deve contenere la sintesi dei risultati della valutazione, possibilmente in forma di grafici</p>
+                <br>
+                <br>
+                <h5> <b> Analisi critica e lavoro futuro </b></h5>
+
+                <p>Questa sezione deve contenere una breve analisi degli eventuali problemi riscontrati durante la valutazione e le modifiche
+                    da implementare nella (ipotetica) seconda versione del prototipo</p>
+
+        <!-- COMMENTO -->
+            </div>
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="concept.html">Concept</a>
-                </li>
-                <li>
-                    <a href="funzionalita.html">Funzionalità</a>
-                </li>
-                <li>
-                    <a href="cosaDicono.html">Dicono di noi</a>
-                </li>
-                <li>
-                    <a href="noi.html">Chi siamo</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+
     </div>
-    <!-- /.container -->
-</nav>
-
-
-
-<!-- fine navigation bar -->
-
-
-<div class="container">
-    <div class="row">
-        <div class="box">
-
-            <hr>
-            <h4 class="intro-text text-center">
-                <strong>Valutazione con gli utenti</strong>
-            </h4>
-            <hr>
-            <br>
-            <br>
-            <h3> <b> Profilo degli utenti </b> </h3>
-
-            <p>Descrizione sintetica di tutte le caratteristiche degli utenti che hanno partecipato alla valutazione del prototipo.
-                Tale descrizione deve necessariamente contenere almeno il numero degli utenti, l'età, il genere e le caratteristiche rilevanti nel caso
-                specifico del vostro social network (ad esempio il corso di studio e l'anno se studenti, oppure la professione, oppure gli interessi, ...)</p>
-            <br>
-            <br>
-            <h3> <b> Strumenti della valutazione</b></h3>
-
-            <p>Questa sezione deve contenere gli strumenti usati durante la valutazione (questionari e/o traccia delle interviste)</p>
-            <br>
-            <br>
-            <h3> <b> Risultato della valutazione </b> </h3>
-
-            <p>Questa sezione deve contenere la sintesi dei risultati della valutazione, possibilmente in forma di grafici</p>
-            <br>
-            <br>
-            <h3> <b> Analisi critica e lavoro futuro </b></h3>
-
-            <p>Questa sezione deve contenere una breve analisi degli eventuali problemi riscontrati durante la valutazione e le modifiche
-                da implementare nella (ipotetica) seconda versione del prototipo</p>
-
-    <!-- COMMENTO -->
-        </div>
-    </div>
-
-</div>
 
 </body>
 </html>
