--- a/index.html
+++ b/index.html
@@ -64,9 +64,17 @@
   <div class="container">
     <div class="row">
       <div class="cl-md-6"  align="center">
+
         <div id="videoIntro" class="embed-responsive-item">
+
+        <!--
           <iframe class="img-rounded" width="560" height="315" src="https://www.youtube.com/embed/NyCst7We6Uw" frameborder="0" allowfullscreen></iframe>
+        -->
+
+          <img class="img-rounded" src="images/logo/spot2.jpg" class="img-responsive" width="560" height="315">
+
         </div>
+
       </div>
     </div>
   </div>
