--- a/cosaDicono.html
+++ b/cosaDicono.html
@@ -76,10 +76,8 @@
                 <h3> <br><br> <b> FASE 1 - Interviste per la definizione dei bisogni del target </b> </h3>
                 <br>
                 <br>
-
                 <p>Per capire quali fossero i reali bisogni degli utenti è stata effettuata un’analisi qualitativa sul campo mirata alla definizione del concept, consistente in delle <b>interviste in profondità</b>.</p>
                 <br>
-
                 <h5> <b> Profilo degli utenti </b> </h5>
                 <br>
                 <p>Le interviste sono state effettuate tra il 21 e il 25 aprile 2017 a Torino e hanno coinvolto un campione di 7 utenti.</p>
@@ -135,38 +133,40 @@
                     Ma ciò che farebbe loro più piacere sarebbe allargare il proprio “network” di amicizie, in modo da poter contare sull’aiuto reciproco, e organizzare nuove attività che possano consentire loro di darsi una mano a vicenda o, più semplicemente, di divertirsi insieme.</p>
                 <br>
                 <br>
-                <h5> <b> Analisi critica e lavoro futuro </b></h5>
+                <h5> <b> Analisi critica e lavoro effettuato </b></h5>
 
                 <p>Sulla base dei risultati ottenuti è stato possibile definire le funzionalità utili agli utenti e, di conseguenza, si è proceduto alla definizione della struttura del sito.</p>
 
 
                 <!-- PRIMA VALUTAZIONE MOCK-UP -->
                 <h3> <br><br> <b> FASE 2 - Primo test effettuato sul mock-up per riscontrare eventuali problematiche </b> </h3>
+                <br>
+                <br>
+                <p>Da un primo test effettuato sul mock-up è stata riscontrata qualche problematica di interazione.</p>
+                <br>
+                <h5> <b> Valutazione e risultati </b> </h5>
+                <br>
+                <p>A un campione di 6 utenti è stato chiesto di svolgere due funzioni all’interno dell’applicazione, differenziate a seconda del “ruolo” dell’utente.<br>
+                    Se i tre utenti-insegnanti non hanno riscontrato alcuna criticità nello svolgere i task loro assegnati (<i>Task1: Contatta un genitore</i>; <i>Task2: Carica un documento nel materiale didattico</i>), i tre utenti-genitori hanno avuto qualche problema nello svolgere i loro compiti:</p>
+                <br>
+                <div class="cl-md-6"  align="center">
+                    <img src="images/tabelleValutazioni/Task1.PNG"/>
+                </div>
+                <br>
+                <p>Il problema del vecchio mock-up consisteva nel fatto che la sezione “Eventi” non era raggiungibile da ogni schermata.</p>
+                <br>
+                <div class="cl-md-6"  align="center">
+                    <img src="images/tabelleValutazioni/Task2.PNG" height="476" width="842"/>
+                </div>
+                <br>
+                <p>Un altro problema nel vecchio mock-up consisteva nel fatto che la sezione dedicata all’“Area comune” tra genitori era raggiungibile esclusivamente dal proprio profilo personale.</p>
+                <br>
 
-                <br>
-                <br>
-                <h5> <b> Profilo degli utenti </b> </h5>
-
-                <p>Descrizione sintetica di tutte le caratteristiche degli utenti che hanno partecipato alla valutazione del prototipo.
-                    Tale descrizione deve necessariamente contenere almeno il numero degli utenti, l'età, il genere e le caratteristiche rilevanti nel caso
-                    specifico del vostro social network (ad esempio il corso di studio e l'anno se studenti, oppure la professione, oppure gli interessi, ...)</p>
-                <br>
-                <br>
-                <h5> <b> Strumenti della valutazione</b></h5>
-
-                <p>Questa sezione deve contenere gli strumenti usati durante la valutazione (questionari e/o traccia delle interviste)</p>
-                <br>
-                <br>
-                <h5> <b> Risultato della valutazione </b> </h5>
-
-                <p>Questa sezione deve contenere la sintesi dei risultati della valutazione, possibilmente in forma di grafici</p>
-                <br>
-                <br>
-                <h5> <b> Analisi critica e lavoro futuro </b></h5>
-
-                <p>Questa sezione deve contenere una breve analisi degli eventuali problemi riscontrati durante la valutazione e le modifiche
-                    da implementare nella (ipotetica) seconda versione del prototipo</p>
-
+                <h5> <b> Analisi critica e lavoro effettuato </b></h5>
+                <p>Se in un primo momento la struttura del social non prevedeva la barra laterale di navigazione fissa, che era presente solo nella schermata della homepage,
+                    dopo le criticità riscontrate dagli utenti si è pensato di introdurla e mantenerla come costante all’interno dell’architettura, affinché la navigazione da parte dell’utente fosse più comoda possibile.
+                    All'interno della sidebar sono infatti presenti i più importanti collegamenti che rendono il sito navigabile in modo immediato.
+                </p>
 
                 <!-- SECONDA VALUTAZIONE MOCK-UP -->
                 <h3> <br><br> <b> FASE 3 - Test finale effettuato sul mock-up </b> </h3>
