--- a/cosaDicono.html
+++ b/cosaDicono.html
@@ -170,32 +170,14 @@
 
                 <!-- SECONDA VALUTAZIONE MOCK-UP -->
                 <h3> <br><br> <b> FASE 3 - Test finale effettuato sul mock-up </b> </h3>
+                <br>
+                <br>
+                <p>Dopo che la struttura del sito è stata ottimizzata è stato effettuato un ultimo test sul nuovo mock-up. <br>
+                    Sia il Task1 che il Task2 riproposti agli utenti-genitori sono stati eseguiti senza alcuna difficoltà.<br>
+                    <br>I risultati ottenuti hanno dunque mostrato come soluzioni adottate in seguito alle difficoltà esposte dagli utenti hanno permesso di ottenere una interfaccia molto più semplice da navigare e intuitiva.<br>
+                    </p>
+                <br>
 
-                <br>
-                <br>
-                <h5> <b> Profilo degli utenti </b> </h5>
-
-                <p>Descrizione sintetica di tutte le caratteristiche degli utenti che hanno partecipato alla valutazione del prototipo.
-                    Tale descrizione deve necessariamente contenere almeno il numero degli utenti, l'età, il genere e le caratteristiche rilevanti nel caso
-                    specifico del vostro social network (ad esempio il corso di studio e l'anno se studenti, oppure la professione, oppure gli interessi, ...)</p>
-                <br>
-                <br>
-                <h5> <b> Strumenti della valutazione</b></h5>
-
-                <p>Questa sezione deve contenere gli strumenti usati durante la valutazione (questionari e/o traccia delle interviste)</p>
-                <br>
-                <br>
-                <h5> <b> Risultato della valutazione </b> </h5>
-
-                <p>Questa sezione deve contenere la sintesi dei risultati della valutazione, possibilmente in forma di grafici</p>
-                <br>
-                <br>
-                <h5> <b> Analisi critica e lavoro futuro </b></h5>
-
-                <p>Questa sezione deve contenere una breve analisi degli eventuali problemi riscontrati durante la valutazione e le modifiche
-                    da implementare nella (ipotetica) seconda versione del prototipo</p>
-
-        <!-- COMMENTO -->
             </div>
         </div>
 
