--- a/noi.html
+++ b/noi.html
@@ -15,7 +15,7 @@
     <img src="images/logo/LogoPuzzle&Payoff3.png" class="img-responsive" height="100" width="250">
 </div>
 
-<!-- Navigation -->
+<!-- Navigation bar -->
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -60,19 +60,19 @@
     <div class="row">
         <div class="box">
             <div class="col-sm-4 text-center">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <img class="img-responsive img-circle" src="images/personas/2peppe.jpg"/>
                 <h4>Giuseppe Gullotta
                     <small>s240165</small>
                 </h4>
             </div>
             <div class="col-sm-4 text-center">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <img class="img-responsive img-circle" src="images/personas/3lili.jpg"/>
                 <h4>Liliana Scaffidi
                     <small>s240165</small>
                 </h4>
             </div>
             <div class="col-sm-4 text-center">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <img class="img-responsive img-circle" src="images/personas/1pam.jpg"/>
                 <h4>Pamela Siclari
                     <small>s240165</small>
                 </h4>
