noi: inserimento email e nomi github

--- a/noi.html
+++ b/noi.html
@@ -60,22 +60,34 @@
     <div class="row">
         <div class="box">
             <div class="col-sm-4 text-center">
-                <img class="img-responsive img-circle" src="images/personas/2peppe.jpg"/>
+                <img class="img-circle" src="images/personas/2peppe.jpg" height="240"/>
+                <br>
+                <br>
                 <h4>Giuseppe Gullotta
-                    <small>s241844</small>
+                    <small> <b>s241844 </b></small>
                 </h4>
+                <p> giuseppe.gullotta1994@gmail.com </p>
+                <p>  <em> GitHub: </em> GiuseppeGullotta </p>
             </div>
             <div class="col-sm-4 text-center">
-                <img class="img-responsive img-circle" src="images/personas/3lili.jpg"/>
+                <img class=" img-circle" src="images/personas/3lili.jpg" height="240"/>
+                <br>
+                <br>
                 <h4>Liliana Scaffidi
-                    <small>s243954</small>
+                    <small> <b> s243954 </b></small>
                 </h4>
+                <p> liliana.scaffidi@gmail.com</p>
+                <p>  <em> GitHub: </em> LilianaScaffidi </p>
             </div>
             <div class="col-sm-4 text-center">
-                <img class="img-responsive img-circle" src="images/personas/1pam.jpg"/>
+                <img class="img-circle" src="images/personas/1pam.jpg" height="240"/>
+                <br>
+                <br>
                 <h4>Pamela Siclari
-                    <small>s240165</small>
+                    <small> <b> s240165 </b></small>
                 </h4>
+                <p> pamela.sicl@gmail.com </p>
+                <p>  <em> GitHub: </em> PamelaSiclari</p>
             </div>
             <div class="clearfix"></div>
         </div>
