funzionalità: correzione frase

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -145,7 +145,7 @@
                 <!-- Funzionalità dettagliate -->
                 <br> <h3> <br><br> <b>  Funzionalità dettagliate da implementare </b> </h3> <br>
 
-                <h7> <i>N.B. Con "(*)" sono indicate le funzionalità uguali sia per genitori che per insegnanti</i> </h7>
+                <h7> <i>N.B. Con "(*)" sono indicate le funzionalità comuni a genitori e insegnanti</i> </h7>
 
                 <br> <br> <br>
                 <div class="genitori-insegnanti">
