funzionalità: correzione errori

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -99,7 +99,7 @@
                         </tr>
                         <tr>
                             <td>Chiedi aiuto o supporto ad altri genitori</td>
-                            <td>Il genitore può contattare gli altri genitori per richiedere qualsiasi tipo di "supporto" (passaggio a scuola<br> ecc...) e/o informazione</td>
+                            <td>Il genitore può contattare gli altri genitori per richiedere qualsiasi tipo di "supporto" (passaggio a scuola<br> ecc.) e/o informazione</td>
                         </tr>
                         <tr>
                             <td>Contatta l'insegnante</td>
@@ -107,7 +107,7 @@
                         </tr>
                         <tr>
                             <td>Chiedi consiglio ad un esperto</td>
-                            <td>Il genitore può richiedere consulenza ad un esperto (psicologo, sessuologo ecc) nel caso in cui lo ritenga <br>necessario per il proprio figlio</td>
+                            <td>Il genitore può richiedere consulenza ad un esperto (psicologo, sessuologo ecc.) nel caso in cui lo ritenga <br>necessario per il proprio figlio</td>
                         </tr>
                     </tbody>
                 </table>
@@ -195,14 +195,14 @@
                     <tr>
                         <td> <b>Homepage</b> </td>
                         <td> Lista Insegnanti <br>- Contatta (*) </td>
-                        <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli Insegnanti (con la<br>
-                            possibilità dunque di contattarli tramite chat "asincrona") </td>
+                        <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli Insegnanti, con la<br>
+                            possibilità di contattarli tramite chat "asincrona" </td>
                         <td> SI lista, <br>NO contatta </td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td> Lista Genitori <br>- Contatta (*) </td>
-                        <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con possibilità di contattarli<br>
+                        <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con la possibilità di contattarli<br>
                             tramite chat "asincrona"  </td>
                         <td> SI lista, <br>NO contatta </td>
                     </tr>
