funzionalità: correzione errori

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -95,7 +95,7 @@
                         <tr>
                             <td>Organizza gruppi di studio ed eventi</td>
                             <td>Il genitore può organizzare gruppi di studio, fornendo il proprio supporto ai bambini in una determinata <br>materia e/o
-                                organizzare eventi sia scolastici, in cui rendere partecipi gli altri genitori (mercatini di Natale, <br>feste, recite), sia extra-scolastici (serate tra genitori/insegnati ecc..) </td>
+                                organizzare eventi sia scolastici, in cui rendere partecipi gli altri genitori (mercatini di Natale, <br>feste, recite), sia extra-scolastici (serate tra genitori/insegnati ecc.) </td>
                         </tr>
                         <tr>
                             <td>Chiedi aiuto o supporto ad altri genitori</td>
