funzionalità: correzione errori nei genitori

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -194,20 +194,6 @@
                     </tr>
                     <tr>
                         <td> <b>Homepage</b> </td>
-                        <td> Lista Insegnanti <br>- Contatta (*) </td>
-                        <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli Insegnanti, con la<br>
-                            possibilità di contattarli tramite chat "asincrona" </td>
-                        <td> SI lista, <br>NO contatta </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Lista Genitori <br>- Contatta (*) </td>
-                        <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con la possibilità di contattarli<br>
-                            tramite chat "asincrona"  </td>
-                        <td> SI lista, <br>NO contatta </td>
-                    </tr>
-                    <tr>
-                        <td>  </td>
                         <td> Visualizzazione dei post pubblicati dagli insegnanti (*) </td>
                         <td> Il genitore potrà visualizzare giorno dopo giorno i post che verranno pubblicati dai vari insegnanti </td>
                         <td> SI </td>
@@ -220,18 +206,40 @@
                         <td> SI data odierna, <br>NO post datati </td>
                     </tr>
                     <tr>
-                        <td>  </td>
-                        <td> Eventi (*) </td>
-                        <td> Tramite questo pulsante, l'utente ha accesso all'area dedicata agli eventi</td>
+                        <td> </td>
+                        <td> Lista Insegnanti <br>- Contatta (*) </td>
+                        <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli insegnanti, con la<br>
+                            possibilità di contattarli tramite chat "asincrona" </td>
+                        <td> SI lista, <br>NO contatta </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Lista Genitori <br>- Contatta (*) </td>
+                        <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con la possibilità di contattarli<br>
+                            tramite chat "asincrona"  </td>
+                        <td> SI lista, <br>NO contatta </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Area comune genitori </td>
+                        <td> Il genitore potrà accedere allo spazio di condivisione
+                            file a cui hanno accesso solo i genitori </td>
                         <td> SI </td>
                     </tr>
                     <tr>
                         <td>  </td>
-                        <td> Promemoria - notifica eventi (*) </td>
-                        <td> In questa sezione l'utente visualizza tutti gli eventi del giorno (sia quelli a cui partecipa, sia<br>
-                            quelli a cui non partecipa)</td>
+                        <td> Eventi (*) </td>
+                        <td> Tramite questo pulsante, il genitore ha accesso all'area dedicata agli eventi</td>
+                        <td> SI </td>
+                    </tr>
+
+                    <tr>
+                        <td> </td>
+                        <td> Spazio scuola </td>
+                        <td> In questa area, i genitori potranno entrare in contatto con i genitori dei bambini delle altri classi <br> della scuola </td>
                         <td> NO </td>
                     </tr>
+
 
                     <tr>
                         <td> <b> Eventi</b> </td>
@@ -246,14 +254,14 @@
                         <td> </td>
                         <td> Partecipa all'evento (*) </td>
                         <td> Agli eventi ai quali si è stati invitati, sotto la descrizione dell'evento, è associato il tasto<br>
-                            Partecipa (si aggiornerà in tal modo la sezione "eventi a cui si parteciperà" nella pagina personale dell'utente) </td>
+                            Partecipa (si aggiornerà in tal modo la sezione "eventi a cui parteciperò" nella pagina personale dell'utente) </td>
                         <td> NO </td>
                     </tr>
 
                     <tr>
                         <td> </td>
                         <td> Crea evento (*) </td>
-                        <td> L'utente ha la possibilità di creare un evento, e di specificarlo al passo successivo </td>
+                        <td> Il genitore ha la possibilità di creare un evento</td>
                         <td> SI </td>
                     </tr>
                     <tr>
@@ -275,13 +283,13 @@
                         <td> </td>
                         <td> Crea evento "Extra" </td>
                         <td> Il genitore può organizzare eventi esterni alla scuola (partite a calcetto, incontri tra<br>
-                            genitori/insegnanti, ecc...), scegliendo di poterli condividere con gli insegnanti o i genitori  </td>
+                            genitori/insegnanti, ecc.), scegliendo di poterli condividere con gli insegnanti o i genitori  </td>
                         <td> SI </td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td> Condividi evento con  - notifica invito evento (*) </td>
-                        <td> L'utente può, prima di finalizzare la creazione di un evento, scegliere di condividerlo con<br>
+                        <td> Il genitore può, prima di finalizzare la creazione di un evento, scegliere di condividerlo con<br>
                             solo gli insegnanti, solo i genitori, o entrambi. In base a tale scelta, verrà inviata la notifica<br>
                             al relativo tipo di utente (nella sezione news eventi della pagina personale) </td>
                         <td> NO </td>
@@ -289,35 +297,29 @@
                     <tr>
                         <td> <b>Profilo Personale </b> </td>
                         <td> Visualizzazione informazioni personali (*) </td>
-                        <td> Verranno visualizzate alcune delle informazioni che l'utente ha inserito nella fase di registrazione </td>
+                        <td> Verranno visualizzate alcune delle informazioni che il genitore ha inserito nella fase di registrazione </td>
                         <td> SI </td>
                     </tr>
                     <tr>
+                        <td> <b> Immagine profilo </b> </td>
+                        <td> Caricamento immagine profilo (*) </td>
+                        <td> Il genitore avrà la possibilità di modificare l'avatar assegnatogli di default con un'altra immagine  </td>
+                        <td> NO </td>
+                    </tr>
+
+                    <tr>
                         <td> </td>
                         <td> Notifiche Eventi (*) </td>
-                        <td> L'utente visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato<br>
+                        <td> Il genitore visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato<br>
                             invitato"), sia gli eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
                         <td> NO </td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td> Chiedi aiuto ad un esperto </td>
-                        <td> Il genitore potrà chiedere l'aiuto di un esperto (psicologo, sessuologo...) qualora lo<br>
+                        <td> Il genitore potrà chiedere l'aiuto di un esperto (psicologo, sessuologo ecc.) qualora lo<br>
                             ritenesse necessario per il proprio figlio </td>
                         <td> NO </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Spazio genitori </td>
-                        <td> Tramite il pulsante "spazio genitori", il genitore potrà accedere allo spazio di condivisione<br>
-                            file a cui hanno accesso solo i genitori </td>
-                        <td> SI </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Area spazio genitori </td>
-                        <td> In questa area, i genitori potranno condividere tra loro documenti e immagini vari </td>
-                        <td> SI </td>
                     </tr>
                     </tbody>
                 </table>
