funzionalità: correzione errori

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -268,14 +268,14 @@
                         <td> </td>
                         <td> Crea evento "Scuola" (*) </td>
                         <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche,<br>
-                            recite, ecc... ), scegliendo di poterli
+                            recite, ecc. ), scegliendo di poterli
                             condividere con gli insegnanti o i genitori</td>
                         <td> SI </td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td> Crea evento "Casa" </td>
-                        <td> Il genitore può organizzare gruppi di studio a casa propria, fornendo il proprio supporto ai<br>
+                        <td> Il genitore può organizzare gruppi di studio a casa propria (o altrove), fornendo il proprio supporto ai<br>
                             bambini in una determinata materia</td>
                         <td> SI </td>
                     </tr>
@@ -283,7 +283,7 @@
                         <td> </td>
                         <td> Crea evento "Extra" </td>
                         <td> Il genitore può organizzare eventi esterni alla scuola (partite a calcetto, incontri tra<br>
-                            genitori/insegnanti, ecc.), scegliendo di poterli condividere con gli insegnanti o i genitori  </td>
+                            genitori/insegnanti ecc.), scegliendo di poterli condividere con gli insegnanti o i genitori  </td>
                         <td> SI </td>
                     </tr>
                     <tr>
@@ -310,7 +310,7 @@
                     <tr>
                         <td> </td>
                         <td> Notifiche Eventi (*) </td>
-                        <td> Il genitore visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato<br>
+                        <td> Il genitore visualizza sia gli eventi a cui è stato invitato (sezione "eventi a cui sono stato<br>
                             invitato"), sia gli eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
                         <td> NO </td>
                     </tr>
