--- a/funzionalita.html
+++ b/funzionalita.html
@@ -297,11 +297,11 @@
                     <tr>
                         <td> <b>Profilo Personale </b> </td>
                         <td> Visualizzazione informazioni personali (*) </td>
-                        <td> Verranno visualizzate alcune delle informazioni che il genitore ha inserito nella fase di registrazione </td>
+                        <td> Verranno visualizzate alcune delle informazioni che il genitore ha inserito nella fase di registrazione. (Il profilo di ciascun utente tipo genitore è privato, per cui visibile solo al proprietario del profilo) </td>
                         <td> SI </td>
                     </tr>
                     <tr>
-                        <td> <b> Immagine profilo </b> </td>
+                        <td> </td>
                         <td> Caricamento immagine profilo (*) </td>
                         <td> Il genitore avrà la possibilità di modificare l'avatar assegnatogli di default con un'altra immagine  </td>
                         <td> NO </td>
@@ -368,23 +368,16 @@
                         <td> SI, NO aggiunta classi/materie ulteriori </td>
                     </tr>
                     <tr>
-                        <td> <b>Homepage</b> </td>
-                        <td> Lista Insegnanti - Contatta (*) </td>
-                        <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli Insegnanti (con la possibilità<br>
-                            dunque di contattarli tramite chat "asincrona") </td>
-                        <td> SI lista, <br>NO contatta </td>
-                    </tr>
-                    <tr>
-                        <td> </td>
-                        <td> Lista Genitori - Contatta (*) </td>
-                        <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con possibilità di contattarli tramite<br>
-                            chat "asincrona"  </td>
-                        <td> SI lista, <br>NO contatta </td>
+                        <td> <b> Homepage</b>  </td>
+                        <td> Calendario (*) </td>
+                        <td> Visualizzazione data odierna con possibilità di aprire il calendario e selezionare una data<br>
+                            diversa (per risalire a post datati) </td>
+                        <td> SI data odierna, <br>NO post datati </td>
                     </tr>
                     <tr>
                         <td>  </td>
                         <td> Visualizzazione dei post pubblicati dagli insegnanti (*) </td>
-                        <td> Il genitore potrà visualizzare giorno dopo giorno i post che verranno pubblicati dai vari insegnanti </td>
+                        <td> L'insegnante potrà visualizzare giorno dopo giorno i post che verranno pubblicati da sè stesso e dagli altri insegnanti </td>
                         <td> SI </td>
                     </tr>
                     <tr>
@@ -394,31 +387,32 @@
                         <td> SI </td>
                     </tr>
                     <tr>
-                        <td>  </td>
-                        <td> Calendario (*) </td>
-                        <td> Visualizzazione data odierna con possibilità di aprire il calendario e selezionare una data diversa<br>
-                            (per risalire a post datati) </td>
-                        <td> SI data odierna, <br>NO post datati </td>
+                        <td> </td>
+                        <td> Lista Insegnanti <br>- Contatta (*) </td>
+                        <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli insegnanti, con la<br>
+                            possibilità di contattarli tramite chat "asincrona" </td>
+                        <td> SI lista, <br>NO contatta </td>
                     </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Lista Genitori <br>- Contatta (*) </td>
+                        <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con la possibilità di contattarli<br>
+                            tramite chat "asincrona"  </td>
+                        <td> SI lista, <br>NO contatta </td>
+                    </tr>
+
                     <tr>
                         <td>  </td>
                         <td> Eventi (*) </td>
-                        <td> Tramite questo pulsante, l'utente ha accesso all'area dedicata agli eventi</td>
+                        <td> Tramite questo pulsante, l'insegnante ha accesso all'area dedicata agli eventi</td>
                         <td> SI </td>
-                    </tr>
-                    <tr>
-                        <td>  </td>
-                        <td> Promemoria - notifica eventi (*) </td>
-                        <td> In questa sezione l'utente visualizza tutti gli eventi del giorno (sia quelli a cui partecipa, sia quelli<br> a cui
-                            non partecipa)</td>
-                        <td> NO </td>
                     </tr>
 
                     <tr>
                         <td> <b> Eventi</b> </td>
                         <td> Calendario (*) </td>
                         <td> Nel calendario saranno evidenziati con colori diversi i giorni nei quali è programmato un evento<br> (3 colori diversi
-                            per 3 tipologie di eventi diversi)<br>
+                            per 3 tipologie di eventi diversi.<br>
                             Schiacciando su un determinato giorno, si visualizza l'evento relativo a tale giorno, con descrizione annessa. Di default, viene visualizzato l'evento relativo alla data odierna
                         </td>
                         <td> SI </td>
@@ -427,27 +421,34 @@
                         <td> </td>
                         <td> Partecipa all'evento (*) </td>
                         <td> Agli eventi ai quali si è stati invitati, sotto la descrizione dell'evento, è associato il tasto Partecipa<br>
-                            (si aggiornerà in tal modo la sezione "eventi a cui si parteciperà" nella pagina personale dell'utente) </td>
+                            (si aggiornerà in tal modo la sezione "eventi a cui parteciperò" nella pagina personale dell'utente) </td>
                         <td> NO </td>
                     </tr>
 
                     <tr>
                         <td> </td>
                         <td> Crea evento (*) </td>
-                        <td> L'utente ha la possibilità di creare un evento, e di specificarlo al passo successivo </td>
+                        <td> L'insegnante ha la possibilità di creare un evento, e di specificarlo al passo successivo </td>
                         <td> SI </td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td> Crea evento "Scuola" (*) </td>
-                        <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite,<br>
-                            ecc... ), scegliendo di poterli condividere con gli insegnanti o i genitori</td>
+                        <td> L'insegnante può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite
+                            ecc. ), scegliendo di poterli condividere con gli insegnanti o i genitori</td>
+                        <td> SI </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
+                        <td> Crea evento "Extra" (*) </td>
+                        <td> L'insegnante può organizzare eventi esterni alla scuola (incontri tra<br>
+                            genitori/insegnanti ecc.), scegliendo di poterli condividere con gli insegnanti o i genitori</td>
                         <td> SI </td>
                     </tr>
                     <tr>
                         <td> </td>
                         <td> Condividi evento con  - notifica invito evento (*) </td>
-                        <td> L'utente può, prima di finalizzare la creazione di un evento, scegliere di condividerlo con solo gli<br>
+                        <td> L'insegnante può, prima di finalizzare la creazione di un evento, scegliere di condividerlo con solo gli
                             insegnanti, solo i genitori, o entrambi. In base a tale scelta, verrà inviata la notifica al relativo tipo<br>
                             di utente (nella sezione news eventi della pagina personale) </td>
                         <td> NO </td>
@@ -456,13 +457,19 @@
                     <tr>
                         <td> <b>Profilo Personale </b> </td>
                         <td> Visualizzazione informazioni personali (*) </td>
-                        <td> Verranno visualizzate alcune delle informazioni che l'utente ha inserito nella fase di registrazione </td>
+                        <td> Verranno visualizzate alcune delle informazioni che l'insegnante ha inserito nella fase di registrazione </td>
                         <td> SI </td>
                     </tr>
                     <tr>
                         <td> </td>
+                        <td> Caricamento immagine profilo (*) </td>
+                        <td> L'insegnante avrà la possibilità di modificare l'avatar assegnatogli di default con un'altra immagine  </td>
+                        <td> NO </td>
+                    </tr>
+                    <tr>
+                        <td> </td>
                         <td> Notifiche Eventi (*) </td>
-                        <td> L'utente visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato invitato"), sia gli
+                        <td> L'insegnante visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato invitato"), sia gli
                             eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
                         <td> NO </td>
                     </tr>
