funzionalità: correzione errori

--- a/funzionalita.html
+++ b/funzionalita.html
@@ -494,14 +494,14 @@
                     <tr>
                         <td> </td>
                         <td> Materiale didattico - carica documento </td>
-                        <td> L'insegnante potrà condividere documenti utili ai fini didattici (svolgimento di determinati esercizi, ...) </td>
+                        <td> L'insegnante potrà condividere documenti utili ai fini didattici (svolgimento di determinati esercizi ecc.) </td>
                         <td> SI </td>
                     </tr>
                     <tr>
                         <td>  </td>
                         <td> Materiale didattico - carica video </td>
-                        <td> L'insegnante potrà condividere video (per far capire il metodo di spiegazione utilizzato in aula, per<br>
-                            approfondire determinati argomenti trattati a lezione, ...) </td>
+                        <td> L'insegnante potrà condividere video (per far capire il metodo di spiegazione utilizzato in aula, per
+                            approfondire determinati argomenti trattati a lezione ecc.) </td>
                         <td> SI </td>
                     </tr>
                 </table>
